# claude-relight-skill

./: .gitignore  README.md  fal.env.example  install.ps1
.claude/skills/mediagen/: SKILL.md  requirements.txt
.claude/skills/mediagen/scripts/: image_edit.py  image_generate.py  image_to_video.py  upscale.py
.claude/skills/mediagen/tests/: test_image_edit.py  test_image_generate.py  test_image_to_video.py  test_upscale.py
.claude/skills/relight/: .env.example  SKILL.md  heygen.env.example  requirements.txt
.claude/skills/relight/scripts/: concat_video.py  extract_frame.py  heygen_avatar.py  heygen_common.py  lipsync_video.py  preflight.py  relight_batch.py  relight_common.py  relight_image.py  relight_video.py  split_video.py
.claude/skills/relight/tests/: test_common.py  test_concat_video.py  test_extract_frame.py  test_heygen_avatar.py  test_lipsync_video.py  test_relight_batch.py  test_relight_image.py  test_relight_video.py  test_split_video.py
docs/plans/: 2026-06-21-mediagen-skill-buildlog.md  2026-06-21-mediagen-skill.md  2026-06-21-mediagen-skill_review.md  2026-06-21-relight-lipsync.md  2026-06-21-relight-skill-buildlog.md  2026-06-21-relight-skill.md  2026-06-21-relight-two-modes-avatar-iv.md
docs/superpowers/specs/: 2026-06-21-mediagen-skill-design.md  2026-06-21-relight-skill-design.md  2026-06-21-relight-two-modes-avatar-iv-design.md
falkit/: pyproject.toml
falkit-core/falkit/: __init__.py  core.py  models.py
falkit-core/tests/: test_core.py  test_models.py
falkit/falkit/: __init__.py
