[project]
name = "falkit"
version = "0.1.0"
description = "Shared Fal AI core for Claude media skills (Relight, MediaGen)."
requires-python = ">=3.10"
dependencies = ["fal-client>=0.5.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["falkit"]
